aws-sdk-compile-checks-usage/tests/fails/missing_message_in_send_message.stderr
error: method `send_message` is missing required argument(s): `message_body`
 --> tests/fails/missing_message_in_send_message.rs:9:16
  |
9 |     sqs_client.send_message()
  |                ^^^^^^^^^^^^
